--- a/src/components/Balloon/Balloon.css
+++ b/src/components/Balloon/Balloon.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 93vh;
 }
 
 .balloon-container {
@@ -18,6 +18,7 @@
 }
 
 .advice-number {
+  text-align: center;
   color: #52FFA8;
   font-size: 0.75rem;
   font-style: normal;
