--- a/src/components/Balloon/Balloon.css
+++ b/src/components/Balloon/Balloon.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 93vh;
+  height: 85vh;
 }
 
 .balloon-container {
@@ -13,13 +13,13 @@
   flex-direction: column;
   align-items: center;
   border-radius: 15px;
-  background: #323A49;
+  background: #323a49;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.15);
 }
 
 .advice-number {
   text-align: center;
-  color: #52FFA8;
+  color: #52ffa8;
   font-size: 0.75rem;
   font-style: normal;
   letter-spacing: 0.1875rem;
@@ -27,7 +27,7 @@
 }
 
 .advice-text {
-  color: #CEE3E9;
+  color: #cee3e9;
   text-align: center;
   font-size: 1.5rem;
   letter-spacing: -0.015rem;
@@ -44,7 +44,7 @@
   height: 0;
   align-self: center;
   width: 100%;
-  border: 1px solid #4F5D74;
+  border: 1px solid #4f5d74;
 }
 
 .dice-button {
@@ -52,14 +52,14 @@
   border: none;
   margin: 2rem 0 -2rem 0;
   cursor: pointer;
-  transition: .5s;
+  transition: 0.5s;
   font-size: 0;
 
   &:hover {
     border-radius: 100%;
-    box-shadow: 0px 0px 30px #52FFA8;
+    box-shadow: 0px 0px 30px #52ffa8;
     transform: rotate(135deg);
-    transition: .5s;
+    transition: 0.5s;
   }
 }
 
